--- a/RedisCacheTest/RedisCacheTest.csproj
+++ b/RedisCacheTest/RedisCacheTest.csproj
@@ -7,7 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0"/>
+        <PackageReference Include="MessagePack" Version="3.1.0" />
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
         <PackageReference Include="StackExchange.Redis" Version="2.8.24" />
     </ItemGroup>
 
